# riscv-assembler

./: .gitignore  .travis.yml  LICENSE  README.md  __init__.py  convert.py  old_readme.md  requirements.txt  riscv_assembler.py  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/scripts/: release.py
docs/: CNAME  README.md  index.html
docs/html/: about.html  ac.html  contact.html  contrib.html  errors.html  index.html  instr.html  toolkit.html
riscinterpreter/: convert.py  convert_class.py  simple.s
riscv-interpreter/: convert_class.py
riscv_assembler/: __init__.py  convert.py  depr_convert.py  instr_arr.py  new.py  parse.py  prjtest.py  project_convert.py  test_project.py  utils.py
riscv_assembler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/riscv_assembler/: convert.py  instr_arr.py  parse.py
tests/: test_class.py  test_utils.py
tests/assembly/: test0.s  test1.s  test2.s  test3.s  test4.s
tests/assembly/prjtest1/: argmax.s  classify.s  dot.s  main.s  matmul.s  read_matrix.s  relu.s  utils.s  write_matrix.s
