[metadata]
name = riscv-assembler
author = Kaya Celebi
author_email = kayacelebi17@gmail.com
description = RISC-V Assembly code assembler package for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kcelebi/riscv-assembler
project_urls =
    Bug Tracker = https://github.com/kcelebi/riscv-assembler/issues
    Changelog = https://github.com/kcelebi/riscv-assembler/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    bitstring

[options.packages.find]
where = src

[options.package_data]
* = data/*.dat

[options.entry_points]
console_scripts =
    riscv_assembler = riscv_assembler.app:entry_point